# ai-ops-dashboard

./: .gitignore  .pre-commit-config.yaml  0  README.md  alembic.ini  code_of_conduct.md  contributing.md  dev-requirements.txt  dict  docker-compose.yml  env_example  license.md  notice.md  pm_agent.py  pytest.ini  requirements.txt  scripts-requirements.txt  test.db
.github/: codeowners
alembic/: env.py
api/: database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt
api/core/: config.py  config_test.py
api/database/: schema.sql
api/db/: session.py
api/db/models/: __init__.py  interaction.py
api/middleware/telemetry.py/: telemetry.py
api/migrations/: env.py
api/migrations/versions/: 0001_initial_ledger_core.py
api/routers/: ask.py  brief.py  gpu.py  integrity.py  interaction.py  roi.py
api/schemas/: dossier.py  gpu.py  integrity.py  interaction.py  roi.py
api/services/: cryptography_service.py  gpu_service.py  integrity_service.py  interaction.py  retrieval_numpy.py  roi_service.py
api/services/database/: schema.sql
api/tests/: conftest.py  test_ask_route.py  test_cryptography_service.py  test_interaction_router.py  test_merkle.py
api/truthrun/: merkle.py
binder_receipts/: ann_diag.json  swap_verify.json
frontend/: index.html  jest.config.js  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.js
notebooks/: 01_data_integrity_tracker.ipynb  02_gpu_efficiency_shap.ipynb  03_roi_monitor.ipynb
public/: index.html
scripts/: ann_diag.py  ann_dry_run.py  ci_local.ps1  (+4 more)
(+40 files in other folders)
